# ros_prcdmp

./: .gitmodules  CMakeLists.txt  PRCDMP_ROS_NODE.files  PRCDMP_ROS_NODE.includes  README.md  installControllers.sh  package.xml  prcdmp_node_plugin.xml
config/: prcdmp_node.yaml
data/set3/conf/: DMP.json  weights.csv
data/set3/episodes/episode0/: recording.csv  replay.csv
data/set6/conf/: DMP.json
data/set7/conf/: weights.csv
data/set9/episodes/episode0/: recording.csv
data/set9/episodes/episode1/: weights.csv
dmp_node/: CMakeLists.txt
dmp_node/include/: dmp_velocity_example_controller.h
dmp_node/launch/: dmp_node.launch
dmp_node/src/: dmp_velocity_example_controller.cpp
include/: debugDummy.h  dmp_ct_velocity_controller.h  dmp_velocity_controller.h  dmp_velocity_example_controller.h  dmpstart_velocity_controller.h  dmpviap_controller.h  simControlNode.h
include/DMP/: DMP.hpp  DiscreteDMP.hpp
include/UTILS/: Config.h
launch/: debugDummy.launch  prcdmp_ct_gdb_node.launch  prcdmp_ct_node.launch  prcdmp_node.launch  serviceDummy.launch  sim_prcdmp_node.launch  talker_listener.launch
prcdmp_node/: CMakeLists.txt  package.xml  prcdmp_node_plugin.xml  prcdmp_ros_controller.files  prcdmp_ros_controller.includes
prcdmp_node/config/: prcdmp_node.yaml
prcdmp_node/data/set4/episodes/episode1/: recording.csv
prcdmp_node/data/set5/conf/: dataset.json
prcdmp_node/data/set6/conf/: dataset.json
prcdmp_node/data/set7/episodes/episode0/: recording.csv
prcdmp_node/data/set9/conf/: .dataset.json.swp  DMP.json  weights.csv
prcdmp_node/include/: dmp_velocity_controller.h  dmp_velocity_example_controller.h  dmpstart_velocity_controller.h  serviceDummy.h
prcdmp_node/include/DMP/: DMP.hpp  DiscreteDMP.hpp
prcdmp_node/include/UTILS/: Config.h
prcdmp_node/launch/: prcdmp_node.launch  prcdmp_srv.launch  prcdmp_timing.launch  talkerDummy.launch
prcdmp_node/src/: dmp_velocity_controller.cpp  dmp_velocity_example_controller.cpp  dmp_velocity_example_controller.cpp.autosave  dmpstart_velocity_controller.cpp  serviceDummy.cpp  talkerDummy.cpp
prcdmp_node/src/DMP/: DMP.cpp  DiscreteDMP.cpp
prcdmp_node/src/UTILS/: Config.cpp
src/: CMakeLists.txt  debugDummy.cpp  dmp_ct_velocity_controller.cpp  dmp_velocity_controller.cpp  dmp_velocity_example_controller.cpp  dmpstart_velocity_controller.cpp  dmpviap_controller.cpp  serviceDummy.cpp  simControlNode.cpp
src/DMP/: CMakeLists.txt  DMP.cpp  DiscreteDMP.cpp
src/UTILS/: Config.cpp
