<?xml version="1.0"?>
<package>
  <name>ros_prcdmp</name>
  <version>0.9.0</version>
  <description>
    This package launches prcdmp calculation in one node and publishes to another node running a libfranka FCI to operate the Franka Panda
  </description>
  <maintainer email="k.ritt@tum.de">Ritt Konstantin</maintainer>
  <license>BSD</license>
  <url type="repository">https://gitlab.lrz.de/ga56jul/ros_prcdmp</url>
  <author>Konstantin Ritt</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>message_generation</build_depend>
  <build_depend>rosconsole</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>roscpp_serialization</build_depend>
  <build_depend>rostime</build_depend>
  <build_depend>std_msgs</build_depend>

  <run_depend>message_runtime</run_depend>
  <run_depend>rosconsole</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>roscpp_serialization</run_depend>
  <run_depend>rostime</run_depend>
  <run_depend>std_msgs</run_depend>
</package>
